--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -606,6 +606,9 @@ ExternalProject_Add(boost
     BUILD_COMMAND <SOURCE_DIR>/b2 install
         -d
         --user-config=${CMAKE_BINARY_DIR}/boost-config.jam
+        --without-context
+        --without-coroutine
+        --without-coroutine2
         --without-graph_parallel
         --without-mpi
         --without-wave
