--- a/boost-config.jam.in
+++ b/boost-config.jam.in
@@ -1,9 +1,8 @@
 using python
     : @PYTHON_VERSION@  # version
-    : @PYTHON_INSTALL_DIR@/bin/python@PYTHON_VERSION@  # cmd-or-prefix
+    : @PYTHON_INSTALL_DIR@/bin/python  # cmd-or-prefix
     : @PYTHON_INSTALL_DIR@/include/python@PYTHON_VERSION@ # includes
     : @PYTHON_INSTALL_DIR@/lib # libraries
-    : <address-model>32 # condition
     ;
 
 # detect the location of the Mac OSX SDK.
