Use Clang instead of AppleGCC to compile on MacOSX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -541,7 +541,7 @@ list(APPEND DIST_PACK_TARGETS glew)
 if(NOT WIN32)
     set(BOOST_CONFIGURE_COMMAND <SOURCE_DIR>/bootstrap.sh)
     set(BOOST_CONFIGURE_FLAGS
-        toolset=darwin
+        toolset=clang
         macosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}
     )
     list(LENGTH CMAKE_OSX_ARCHITECTURES _LEN)
