--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -558,13 +558,18 @@ if(NOT WIN32)
     get_filename_component(BOOST_OSX_SYSROOT "${BOOST_OSX_SYSROOT}" DIRECTORY)
 else()
     set(BOOST_CONFIGURE_COMMAND <SOURCE_DIR>/bootstrap.bat)
-    string(REGEX REPLACE "^v([1-9][0-9])*$" "\\1" _PLATFORM_TOOLSET "${CMAKE_VS_PLATFORM_TOOLSET}")
-    math(EXPR _PLATFORM_TOOLSET "${_PLATFORM_TOOLSET}/10")
-    set(_PLATFORM_TOOLSET "${_PLATFORM_TOOLSET}.0")
+    string(REGEX REPLACE "^v([1-9][0-9]*)(_(.*))?$" "\\1;\\3" _VS_PLATFORM_TOOLSET "${CMAKE_VS_PLATFORM_TOOLSET}")
+    list(GET _VS_PLATFORM_TOOLSET 0 _VS_PLATFORM_TOOLSET_VERSION)
+    list(GET _VS_PLATFORM_TOOLSET 1 _VS_PLATFORM_TOOLSET_TARGET)
+    math(EXPR _VS_PLATFORM_TOOLSET_VERSION "${_VS_PLATFORM_TOOLSET_VERSION}/10")
+    set(_VS_PLATFORM_TOOLSET_VERSION "${_VS_PLATFORM_TOOLSET_VERSION}.0")
     set(BOOST_CONFIGURE_FLAGS
-        toolset=msvc-${_PLATFORM_TOOLSET}
+        toolset=msvc-${_VS_PLATFORM_TOOLSET_VERSION}
         debug-store=database
     )
+    if("${_VS_PLATFORM_TOOLSET_TARGET}" STREQUAL "xp")
+        list(APPEND BOOST_CONFIGURE_FLAGS define=BOOST_USE_WINAPI_VERSION=BOOST_WINAPI_VERSION_WINXP)
+    endif()
     set(BOOST_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR}/Boost)
     set(BOOST_OSX_SYSROOT "")
 endif()
