Build all dependencies with C++11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ cmake_minimum_required(VERSION ${REQUIRED_CMAKE_VERSION})
 
 option(BUILD_SHARED_LIBS "Build external projects as shared libraries." ON)
 option(CMAKE_VERBOSE_MAKEFILE "Build with verbose Makefile output." OFF)
+set(CMAKE_CXX_STANDARD 11 CACHE STRING "Set the C++ standard the dependencies should be build with.")
 set(CMAKE_OSX_DEPLOYMENT_TARGET 10.7 CACHE STRING "Set the minimum OSX deployment target version")
 set(CMAKE_OSX_ARCHITECTURES "i386;x86_64" CACHE STRING "Set the architecture the universal binaries for OSX should be built for")
 set(CMAKE_INSTALL_MESSAGE NEVER CACHE STRING "Set the verbosity level for the install messages")
@@ -172,6 +173,7 @@ ExternalProject_Add(zlib
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
         -DSKIP_INSTALL_FILES=ON
         -DINSTALL_INC_DIR=${ZLIB_INCLUDE_DIR}
     INSTALL_DIR ${SDK_INSTALL_DIR}
@@ -200,6 +202,7 @@ ExternalProject_Add(libpng
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
         -DPNG_SHARED=${PNG_SHARED}
         -DPNG_STATIC=${PNG_STATIC}
         -DPNG_TESTS=OFF
@@ -281,6 +284,7 @@ ExternalProject_Add(python
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
         -DCMAKE_PREFIX_PATH=<INSTALL_DIR>
         -DBUILD_LIBPYTHON_SHARED=${BUILD_SHARED_LIBS}
         -DPYTHON_VERSION=${PYTHON_VERSION}
@@ -378,6 +382,7 @@ ExternalProject_Add(freetype
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
     INSTALL_DIR ${SDK_INSTALL_DIR}
 )
 list(APPEND DIST_PACK_TARGETS freetype)
@@ -407,6 +412,7 @@ ExternalProject_Add(sdl
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
         -DSDL_STATIC=OFF
         -DDIRECTX=OFF
         -DRENDER_D3D=OFF
@@ -441,6 +447,7 @@ ExternalProject_Add(libogg
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
         ${LIBOGG_CONFIGURE_FLAGS}
     INSTALL_DIR ${LIBOGG_CONFIGURE_INSTALL_DIR}
 )
@@ -472,6 +479,7 @@ ExternalProject_Add(libvorbis
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
         ${LIBVORBIS_CONFIGURE_FLAGS}
     INSTALL_DIR ${LIBVORBIS_CONFIGURE_INSTALL_DIR}
 )
@@ -532,6 +540,7 @@ ExternalProject_Add(glew
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
         -DBUILD_UTILS=OFF
         <SOURCE_DIR>/build/cmake/
     INSTALL_DIR ${SDK_INSTALL_DIR}
@@ -547,9 +556,15 @@ if(NOT WIN32)
     list(LENGTH CMAKE_OSX_ARCHITECTURES _LEN)
     if(_LEN GREATER 1)
         # Lets assume we want only Intel universal binaries for now
-        set(BOOST_CONFIGURE_FLAGS ${BOOST_CONFIGURE_FLAGS} address-model=32_64)
+        list(APPEND BOOST_CONFIGURE_FLAGS address-model=32_64)
     endif()
     unset(_LEN)
+    if(CMAKE_CXX_STANDARD GREATER 10)
+        list(APPEND BOOST_CONFIGURE_FLAGS
+            "cxxflags=-std=c++${CMAKE_CXX_STANDARD} -stdlib=libc++"
+            "linkflags=-stdlib=libc++"
+        )
+    endif()
     set(BOOST_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
     set(BOOST_OSX_SYSROOT ${CMAKE_OSX_SYSROOT})
     # strip concrete mac osx directory to allow boost build the detection of
