Add minimum target OSX and architectures to name when packaging SDK on MacOSX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -730,6 +730,10 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     string(REPLACE "_" "-" _VS_PLATFORM_TOOLSET "${CMAKE_VS_PLATFORM_TOOLSET}")
     set(DIST_TOOLSET ${DIST_TOOLSET}-${_VS_PLATFORM_TOOLSET})
 endif()
+if(CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
+    string(REPLACE ";" "-" _OSX_ARCHITECTURES "${CMAKE_OSX_ARCHITECTURES}")
+    set(DIST_TOOLSET Clang-MacOSX-${CMAKE_OSX_DEPLOYMENT_TARGET}-${_OSX_ARCHITECTURES})
+endif()
 
 if(WIN32)
     set(DIST_PACK_COMMAND ${ZIP_EXECUTABLE} -r -q -9)
