Fix CMake error.
Fix cmake error if CMAKE_VS_PLATFORM_TOOLSET don't have target like "v141"
```CMake Error at CMakeLists.txt:571 (string):
  string sub-command REGEX, mode REPLACE: replace expression "\1;\3" contains
  an out-of-range escape for regex "^v([1-9][0-9]*)(_(.*))?$".```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -568,7 +568,7 @@ if(NOT WIN32)
     get_filename_component(BOOST_OSX_SYSROOT "${BOOST_OSX_SYSROOT}" DIRECTORY)
 else()
     set(BOOST_CONFIGURE_COMMAND <SOURCE_DIR>/bootstrap.bat)
-    string(REGEX REPLACE "^v([1-9][0-9]*)(_(.*))?$" "\\1;\\3" _VS_PLATFORM_TOOLSET "${CMAKE_VS_PLATFORM_TOOLSET}")
+    string(REGEX REPLACE "^v([1-9][0-9]*)(.*)$" "\\1;\\2" _VS_PLATFORM_TOOLSET "${CMAKE_VS_PLATFORM_TOOLSET}")
     list(GET _VS_PLATFORM_TOOLSET 0 _VS_PLATFORM_TOOLSET_VERSION)
     list(GET _VS_PLATFORM_TOOLSET 1 _VS_PLATFORM_TOOLSET_TARGET)
     math(EXPR _VS_PLATFORM_TOOLSET_VERSION "${_VS_PLATFORM_TOOLSET_VERSION}/10")
@@ -576,7 +576,7 @@ else()
     set(BOOST_CONFIGURE_FLAGS
         debug-store=database
     )
-    if("${_VS_PLATFORM_TOOLSET_TARGET}" STREQUAL "xp")
+    if("${_VS_PLATFORM_TOOLSET_TARGET}" STREQUAL "_xp")
         list(APPEND BOOST_CONFIGURE_FLAGS define=BOOST_USE_WINAPI_VERSION=BOOST_WINAPI_VERSION_WINXP)
     endif()
     set(BOOST_TOOLSET msvc-${_VS_PLATFORM_TOOLSET_VERSION})
