Set freetype dependency build type to `Release`
When building FreeOrion cl.exe reports a missing PDB file for the
freetype dependency.  However it seems like the compiler does only
support embedded debug data for static libraries.  Both changing
freetype to a shared library (upstream doesn't provide exported symbols)
nor embedding the debug symbols into the static library (more patching
required) are viable solutions so setting the build mode to `Release` is
probably the easiest available fix.

Fixes #25.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -378,7 +378,7 @@ ExternalProject_Add(freetype
         # FreeType doesn't provide any exported symbols, so build
         # it as static library.
         -DBUILD_SHARED_LIBS=OFF
-        -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+        -DCMAKE_BUILD_TYPE=Release
         -DCMAKE_VERBOSE_MAKEFILE=${CMAKE_VERBOSE_MAKEFILE}
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES_}
