--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ script:
 after_success:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "linux" && "${TRAVIS_BRANCH}" == "master" && "${TRAVIS_PULL_REQUEST}" == "false" ]]; then
-      docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}"
+      docker login -u="${DOCKER_USER}" -p="${DOCKER_PASS}"
       docker push ${DOCKER_REPO}:${DOCKER_NTAG}
       docker push ${DOCKER_REPO}:latest
     fi
