Guard docker push when the current tag doesn't match the remote tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ script:
     fi
 after_success:
   - >
-    if [[ "${TRAVIS_OS_NAME}" == "linux" && "${TRAVIS_BRANCH}" == "master" && "${TRAVIS_PULL_REQUEST}" == "false" ]]; then
+    if [[ "${TRAVIS_OS_NAME}" == "linux" && "${TRAVIS_BRANCH}" == "master" && "${TRAVIS_PULL_REQUEST}" == "false" && "${DOCKER_CTAG}" != "${DOCKER_RTAG}" ]]; then
       docker login -u="${DOCKER_USER}" -p="${DOCKER_PASS}"
       docker push ${DOCKER_REPO}:${DOCKER_NTAG}
       docker push ${DOCKER_REPO}:latest
