Debug docker upload

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,8 +53,10 @@ after_success:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "linux" && "${TRAVIS_BRANCH}" == "master" && "${TRAVIS_PULL_REQUEST}" == "false" && "${DOCKER_CTAG}" != "${DOCKER_RTAG}" ]]; then
       docker login -u="${DOCKER_USER}" -p="${DOCKER_PASS}"
-      docker push ${DOCKER_REPO}:${DOCKER_NTAG}
-      docker push ${DOCKER_REPO}:latest
+      echo "${DOCKER_CTAG}"
+      echo "${DOCKER_RTAG}"
+      #docker push ${DOCKER_REPO}:${DOCKER_NTAG}
+      #docker push ${DOCKER_REPO}:latest
     fi
 deploy:
   provider: releases
