--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ script:
       docker pull ${DOCKER_REPO}:${DOCKER_RTAG}
       docker build -f Dockerfile -t ${DOCKER_REPO}:${SHORT_COMMIT} .
       # calculate current tag
-      export DOCKER_CTAG=$(docker inspect ${DOCKER_REPO}:${SHORT_COMMIT} | jq '.[]["ContainerConfig"]["Labels"]["version"]' | sed -n '2s/"//gp')
+      export DOCKER_CTAG=$(docker inspect ${DOCKER_REPO}:${SHORT_COMMIT} | jq '.[]["ContainerConfig"]["Labels"]["version"]' | sed -n 's/"//gp')
       if [[ "${DOCKER_CTAG}" != "${DOCKER_RTAG}" ]]; then
         docker tag ${DOCKER_REPO}:${SHORT_COMMIT} ${DOCKER_REPO}:${DOCKER_NTAG}
         docker tag ${DOCKER_REPO}:${SHORT_COMMIT} ${DOCKER_REPO}:latest
