Enable Docker image uploading after fixing TravisCI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,10 +53,8 @@ after_success:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "linux" && "${TRAVIS_BRANCH}" == "master" && "${TRAVIS_PULL_REQUEST}" == "false" && "${DOCKER_CTAG}" != "${DOCKER_RTAG}" ]]; then
       docker login -u="${DOCKER_USER}" -p="${DOCKER_PASS}"
-      echo "${DOCKER_CTAG}"
-      echo "${DOCKER_RTAG}"
-      #docker push ${DOCKER_REPO}:${DOCKER_NTAG}
-      #docker push ${DOCKER_REPO}:latest
+      docker push ${DOCKER_REPO}:${DOCKER_NTAG}
+      docker push ${DOCKER_REPO}:latest
     fi
 deploy:
   provider: releases
