--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,7 @@ script:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
       cmake -G "Xcode" -DCMAKE_OSX_SYSROOT=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk ..
-      sysctl hw.ncpu
-      travis_wait 70 cmake --build . --config RelWithDebInfo -- -parallelizeTargets -jobs $(sysctl hw.ncpu | awk '{print 2*$2}')
+      travis_wait 70 cmake --build . --config RelWithDebInfo -- -parallelizeTargets -jobs $(sysctl hw.ncpu | awk '{print $2}')
     fi
   - >
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
