Set dylib install_names and rpath on MacOSX
To locate dynamic libraries on OSX the `dydl` linker uses an embedded
dylib attribute called `ìnstall_names`.  Boost build used by default a
hardcoded installname in the pattern `@rpath/<name of library>`, which
caused the FreeOrion executable to crash despite the libaries available
and in the search path.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -529,6 +529,8 @@ if(NOT WIN32)
             "cxxflags=-std=c++${CMAKE_CXX_STANDARD} -stdlib=libc++ ${BOOST_ARCHITECTURES}"
             "cflags=${BOOST_ARCHITECTURES}"
             "linkflags=-stdlib=libc++ ${BOOST_ARCHITECTURES}"
+            "hardcode-dll-paths=false"
+            "dll-path=@executable_path/../SharedSupport"
         )
     endif()
     set(BOOST_TOOLSET clang)
